# talk-loco-commands-rs

talk-loco-commands/: Cargo.toml
talk-loco-commands-derive/: Cargo.toml
talk-loco-commands-derive/src/: lib.rs
talk-loco-commands/src/: lib.rs  ping.rs
talk-loco-commands/src/booking/: get_conf.rs
talk-loco-commands/src/chat/: change_svr.rs  chat_info.rs  chat_on_room.rs  chg_meta.rs  decun_read.rs  delete_msg.rs  get_mem.rs  kick_out.rs  l_chat_list.rs  leave.rs  left.rs  login_list.rs  member.rs  msg.rs  new_mem.rs  noti_read.rs  set_meta.rs  set_st.rs  sync.rs  sync_msg.rs  update_chat.rs  write.rs
talk-loco-commands/src/checkin/: buy_cs.rs  checkin.rs
