[package]
name = "talk-loco-commands-derive"
description = "talk-loco-commands derives"
readme = "readme.md"
version = "0.1.0"
license = "MIT"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
bson = "1.1.0"
loco-protocol = { git = "https://github.com/djdisodo/loco-protocol-rs" }