[package]
name = "talk-loco-commands"
version = "0.2.0"
license = "MIT"
keywords = ["talk", "loco"]
readme = "readme.md"
description = "Official Loco command set"
repository = "https://github.com/storycraft/talk-loco-commands-rs"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "1.1.0"
loco-protocol = { git = "https://github.com/djdisodo/loco-protocol-rs" }
loco-protocol-derive = { git = "https://github.com/djdisodo/loco-protocol-rs" }
talk-loco-commands-derive = { path = "../talk-loco-commands-derive" }